refactor(config/test): implement constructor injection for LocalStorageService
- Replaced @Value field injection with Constructor Injection in LocalStorageService, promoting immutability and testability.
- Updated LocalStorageServiceTest to inject manual extensions during setup, removing dependency on Spring Context for unit tests.
- Refactored test assertions using AssertJ's .satisfies() for more granular and readable verification.
- Ensured all file-system tests remain isolated and deterministic using Jimfs.

Aligned with SOLID Dependency Inversion and Spring Framework best practices.